--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Akmal Maulana Basri</title>
+        <title>Raynan</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -25,7 +25,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg topbar text-uppercase fixed-top" id="s">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Akmal Maulana</a>
+                <a class="navbar-brand" href="#page-top">RADEN KIRDUN</a>
                 <button class="navbar-toggler button-topbar rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-7 desc">
                         <h1 class="mt-10 poppins">Hello ðŸ‘‹</h1>
-                        <h2 class="poppins">I am Akmal Maulana Basri</h2>
+                        <h2 class="poppins">I am Raynan</h2>
                         <h5 class="poppins">Junior Web Developer</h5>
                         <p class="poppins">I'm 10<sup>th</sup> grade in Vocational High School from Bogor and I have been focus learning programming since 2020</p>
                     </div>
@@ -69,7 +69,7 @@
                 <div class="card bout-card">
                     <div class="row">
                         <div class="col-sm-12 col-md-12 col-lg-6">
-                            <h4 class="bout-me poppins">Full Name : Akmal Maulana Basri</h4>
+                            <h4 class="bout-me poppins">Full Name : Raynan</h4>
                             <h4 class="bout-me poppins">Nick Name : Akmal</h4>
                             <h4 class="bout-me poppins">Age : 16yo</h4>
                             <h4 class="bout-me poppins">Instagram : @bazzree</h4>
@@ -220,7 +220,7 @@
 
         <div class="footers">
             <div class="container">
-                all right reserved &copy; 2021 Akmal Maulana Basri
+                all right reserved &copy; 2021 Raynan
             </div>
         </div>
        
