--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p class="poppins">I'm 10<sup>th</sup> grade in Vocational High School from Bogor and I have been focus learning programming since 2020</p>
                     </div>
                     <div class="col-5 d-none d-md-block">
-                        <img class="pp rounded mx-auto d-block" src="https://akmalmaulana.my.id/img/foto-formal.jpeg" alt="" />
+                        <img class="pp rounded mx-auto d-block" src="./IMG_20230509_131412.jpg" alt="" />
                     </div>
                 </div>
             </div>
